added books + travel

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -18,16 +18,32 @@
   <div id="content">
   <h1>Bookshelf</h1>
   
-  <p>*** NOT MY WORDS!!!***I sometimes post book recommendations on Twitter and people often respond asking if I have an overall list of books I think are worth reading. I don't, and end up feeling a bit guilty about being so haphazard. So, maybe this will be interesting to some people: below is a fairly complete catalog of the physical books I own. I always enjoy reading others' lists and browsing their bookshelves, so this intended to be a digital version of that. I've only read about half of the books here. (I guess I fall somewhere in the middle in the <a href="https://books.google.com/books?id=_ntDTaMUys8C&amp;lpg=PT115&amp;ots=E3jhWnG6aB&amp;pg=PT124#v=onepage&amp;q&amp;f=false">Umberto Eco theory of the library</a>.)</p>
+  <p>The following is a list of books I have read recently, am currently reading, or have physical copies of that I plan to read.</p>
   
-  <p>I flagged a few books that I thought were particularly great in green and those that I thought were substantially above average in light blue. These designations are non-exhaustive, though—it's kinda hard to recommend books in the abstract. And I've no doubt missed some.</p>
-  
-  <p>Since the stacks and shelves lack any particular order, so too does this list. *** NOT MY WORDS!!!***</p>
-  
+  <p>Also included are podcasts I follow regularly.</p>
   
   <ul>
-  
+  <li>Attacking Network Protocols</li>
+  <li>Masters of Doom</li>
+  <li>The Little Schemer</li>
+  <li>The Making of The Atomic Bomb</li>
+  <li>Deep Learning in Python</li>
+  <li>No Country for Old Men</li>
+  <li>The Generalissimo</li>
+  <li>The Master Algorithm</li>
   </ul>
+
+  <h3>Podcasts</h3>
+  <ul>
+      <li>a16z</li>
+      <li>Risky Business</li>
+      <li>Cyberwier</li>
+      <li>TWiT</li>
+      <li>Daniel Miesler Unsupervised Learning</li>
+      <li>npr 1A</li>
+      <li>npr Music</li>
+      <li>npr Hidden Brain</li>
+      </ul>
   
   </div>
 
