added books + travel

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -9,9 +9,10 @@
   <ul>
       <li><a href="about.html">About</a></li>
       <li><a href="bookshelf.html">Bookshelf</a></li>
-      <li><a href="links.html">Links</a></li>
+      <!-- <li><a href="links.html">Links</a></li> -->
       <li><a href="people.html">People</a></li>
       <li><a href="travel.html">Travel</a></li>
+      <li><a href="music.html">Music</a></li>
     </ul>
   </div>
   <div id="left">&nbsp;</div>
