--- a/people.html
+++ b/people.html
@@ -9,7 +9,7 @@
 <ul>
   <li><a href="about.html">About</a></li>
   <li><a href="bookshelf.html">Bookshelf</a></li>
-  <li><a href="links.html">Links</a></li>
+  <!-- <li><a href="links.html">Links</a></li> -->
   <li><a href="people.html">People</a></li>
   <li><a href="travel.html">Travel</a></li>
 </ul>
