--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <link rel="stylesheet" href="static/style.css">
   <meta charset="utf-8">
   <title>Home · Paul Torre</title>
+  <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
 <div id="menu">
